# MagicPriceUpdater

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
doc/: behavior_description.md  interface_proposal.md  mpu_config.yaml  strategies_options_example.json
mpu/: __init__.py  card_market_client.py  cli.py  config_handling.py  constants.py  excel_formats.py  getstock.py  log_conf.py  log_utils.py  main.py  market_extract.py  oauth_client.py  product_price.py  pyopenxl_utils.py  stats.py  stats_calculations.py  stock_handling.py  stock_io.py  strategies_utils.py  test_one_request.json  update.py
mpu/commands/: calculate.py  getdata.py  getstock.py  stats.py  update.py
mpu/utils/: log_utils.py  oauth_client.py  pyopenxl_utils.py  strategies_utils.py
test/: conftest.py  test_integration_full.py  test_update.py
