[metadata]
name = mpu
description = "mpu is an utility to interact with Card Market stock."
long_description = file: README.md
license = MIT
author = Tanguy Le Floch
provides = mpu
url = https://github.com/TanguyLe/MagicPriceUpdater
download_url =
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7

[options]
zip_safe = False
python_requires ~= 3.7.0
packages = find:
include_package_data = True
install_requires =
    Authlib~=0.15.2
    dicttoxml~=1.7.4
    furl~=2.1.0
    pandas~=1.1.4
    numpy!=1.19.4
    requests~=2.25.0
    typer~=0.3.2
    openpyxl~=3.0.5

[options.extras_require]
tests =
	pytest~=6.0.0
	pytest-mock~=3.2.0
	requests-mock~=1.8.0
dev =
    matplotlib
    jupyterlab
    plotly
    nbformat

[options.entry_points]
console_scripts =
  	mpu = mpu.cli:main

[options.package_data]
* = py.typed

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
