[metadata]
name = mpu
description = "mpu is an utility to interact with Card Market stock."
long_description = file: README.md
license = MIT
author = Tanguy Le Floch
provides = mpu
url = https://github.com/TanguyLe/MagicPriceUpdater
download_url =
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.11

[options]
zip_safe = False
python_requires ~= 3.11.0
packages = find:
include_package_data = True
install_requires =
    Authlib~=1.2.1
    dicttoxml~=1.7.16
    furl~=2.1.2
    pandas~=2.1.1
    requests~=2.31.0
    typer~=0.9.0
    openpyxl~=3.1.2
    PyYAML~=6.0.1

[options.extras_require]
tests =
	pytest~=7.4.2
	pytest-mock~=3.11.1
	requests-mock~=1.11.0

[options.entry_points]
console_scripts =
  	mpu = mpu.cli:main

[options.package_data]
* = py.typed

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
